mejoras en botones

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         <!-- Hastag Sesion 1 -->
         <section class="hastag-seccion">
             <div class="container">
-                <p class="text-center">#Trabajando para la comunidad</p>
+                <h3 class="text-center">#Trabajando para la comunidad</h3>
             </div>
         </section>
         <!-- Fin de Hastag Sesion 1 -->
@@ -75,8 +75,8 @@
                             de las personas más vulnerables de nuestra comunidad. Nos comprometemos a ofrecer apoyo,
                             recursos y programas que generen un impacto positivo y duradero en la vida de quienes más lo
                             necesitan.</p>
-                        <a href="./conocenos.html" title="Conoce más sobre la fundación"><button
-                                class="boton-informacion">Conócenos</button></a>
+                        <a class="boton-informacion" href="./conocenos.html"
+                            title="Conoce más sobre la fundación">Conócenos</a>
                     </div>
                 </div>
                 <div class="row align-items-center" data-aos="fade-right" data-aos-duration="1800">
@@ -91,8 +91,8 @@
                             participación ciudadana, como jornadas de limpieza, jardinería comunitaria y eventos
                             culturales. Juntos, construimos un bienestar y un mejor desarrollo de los niños, niñas y
                             adolescentes de nuestra comunidad.</p>
-                        <a href="./nuestrosproyectos.html" title="Descubre nuestros proyectos"><button
-                                class="boton-informacion">Conoce cada proyecto</button></a>
+                        <a class="boton-informacion" href="./nuestrosproyectos.html"
+                            title="Descubre nuestros proyectos">Conoce cada proyecto</a>
                     </div>
                     <div class="col-12 col-sm-12 col-lg-6 mb-3 order-md-2 order-sm-1 text-center">
                         <img src="./assets/images/inicio/informativo/informativo_2.jpg"
@@ -155,12 +155,11 @@
                             contribución, grande o pequeña, es un paso más hacia un mundo mejor para todos.</p>
                     </div>
                     <div class="col-12 text-center">
-                        <a href="./realizar_donativos.html" aria-label="Haz tu donación" title="Ir a la página de donaciones">
-                            <button class="boton-donacion">
-                                <span class="fas fa-hand-holding-heart icono-donacion" aria-hidden="true"
-                                    title="Icono de un mano sosteniendo un corazón"></span>¡Haz tu donación!
-                            </button>
-                        </a>
+                        <a class="text-decoration-none boton-donacion" href="./realizar_donativos.html"
+                            aria-label="Haz tu donación" title="Ir a la página de donaciones">
+                            <span class="fas fa-hand-holding-heart icono-donacion" aria-hidden="true"
+                                title="Icono de un mano sosteniendo un corazón"></span>
+                            ¡Haz tu donación!</a>
                     </div>
                 </div>
             </div>
@@ -187,10 +186,10 @@
                             <div class="card-body">
                                 <h5 class="noticias-titulo">Renovación en el Parque Virgen del Carmen: Un Espacio de
                                     Comunidad Revitalizado</h5>
-                                <a href="blog.html#renovacion_parque_virgen_del_carmen"
+                                <a class="boton-noticias" href="blog.html#renovacion_parque_virgen_del_carmen"
                                     aria-label="Leer más sobre la renovación en el Parque Virgen del Carmen"
-                                    title="Leer más sobre la renovación en el Parque Virgen del Carmen"><button
-                                        class="boton-noticias">Saber más</button></a>
+                                    title="Leer más sobre la renovación en el Parque Virgen del Carmen">Saber
+                                    más</a>
                                 <p class="card-text"><small class="text-body-secondary">Última actualización hace 3
                                         minutos</small></p>
                             </div>
@@ -204,10 +203,10 @@
                             <div class="card-body">
                                 <h5 class="noticias-titulo">Mejoras viales en la calle 3 de la avenida 6: Un paso hacia
                                     una movilidad más eficiente</h5>
-                                <a href="blog.html#mejoras_viales_barrio_Torcoroma"
+                                <a class="boton-noticias" href="blog.html#mejoras_viales_barrio_Torcoroma"
                                     aria-label="Leer más sobre las mejoras viales en la calle 3 de la avenida 6"
-                                    title="Leer más sobre las mejoras viales en la calle 3 de la avenida 6"><button
-                                        class="boton-noticias">Saber más</button></a>
+                                    title="Leer más sobre las mejoras viales en la calle 3 de la avenida 6">Saber
+                                    más</a>
                                 <p class="card-text"><small class="text-body-secondary">Última actualización hace 3
                                         minutos</small></p>
                             </div>
@@ -221,10 +220,10 @@
                             <div class="card-body">
                                 <h5 class="noticias-titulo">Renovación de la cancha del sector Boconó: Un espacio
                                     deportivo recuperado y embellecido</h5>
-                                <a href="blog.html#renovacion_cancha_sector_bocono"
-                                    aria-label="Leer más sobre la renovación de la cancha del sector Boconó"
-                                    title="Leer más sobre la renovación de la cancha del sector Boconó"><button
-                                        class="boton-noticias">Saber más</button></a>
+                                    <a class="boton-noticias" href="blog.html#renovacion_cancha_sector_bocono"
+                                        aria-label="Leer más sobre la renovación de la cancha del sector Boconó"
+                                        title="Leer más sobre la renovación de la cancha del sector Boconó">Saber
+                                        más</a>
                                 <p class="card-text"><small class="text-body-secondary">Última actualización hace 3
                                         minutos</small></p>
                             </div>
@@ -238,10 +237,10 @@
                             <div class="card-body">
                                 <h5 class="noticias-titulo">Alegría y diversión en el barrio Aniversario: Una tarde
                                     mágica para los niños</h5>
-                                <a href="blog.html#alegria_y_diversion_barrio_Aniversario"
-                                    aria-label="Leer más sobre la alegría y diversión en el barrio Aniversario"
-                                    title="Leer más sobre la alegría y diversión en el barrio Aniversario"><button
-                                        class="boton-noticias">Saber más</button></a>
+                                    <a class="boton-noticias" href="blog.html#alegria_y_diversion_barrio_Aniversario"
+                                        aria-label="Leer más sobre la alegría y diversión en el barrio Aniversario"
+                                        title="Leer más sobre la alegría y diversión en el barrio Aniversario">Saber
+                                        más</a>
                                 <p class="card-text"><small class="text-body-secondary">Última actualización hace 3
                                         minutos</small></p>
                             </div>
@@ -264,8 +263,8 @@
 
     <!-- Inicio de Footer -->
     <footer id="footer-componente"></footer>
-    <!-- Fin de Footer ---->
-    
+    <!-- Fin de Footer -->
+
     <!-- JS COMPONENTES -->
     <script src="./assets/js/components.js"></script>
     <!-- JS BOOTSTRAP -->
