--- a/public/nuestrosproyectos.html
+++ b/public/nuestrosproyectos.html
@@ -42,7 +42,7 @@
     <!-- Inicio de Scroll -->
     <div id="scroll-arrow-componente"></div>
     <!-- Fin de Scroll -->
-    
+
     <main>
 
         <!-- Inicio de Sección de Proyectos -->
@@ -54,7 +54,8 @@
                         Nuestros Proyectos</h3>
                     <p class="proyecto-descriptivo animate__animated animate__backInRight"
                         title="Descripción de nuestros proyectos">
-                        En la Fundación Jaimes Chía Trabajando para la Comunidad, estamos comprometidos con la creación de proyectos que generen un
+                        En la Fundación Jaimes Chía Trabajando para la Comunidad, estamos comprometidos con la creación
+                        de proyectos que generen un
                         impacto positivo y duradero en nuestra comunidad. Desde iniciativas deportivas que promueven un
                         estilo de vida activo hasta programas sociales que brindan apoyo a quienes más lo necesitan,
                         nuestros proyectos son la piedra angular de nuestra misión de construir un mundo más inclusivo y
@@ -121,7 +122,8 @@
                     <h5 class="social-titulo" title="Proyecto social: 'Manos Solidarias'">Proyecto social: "Manos
                         Solidarias"</h5>
                     <p class="social-subtitulo" title="Descripción del proyecto social">
-                        Los proyectos sociales de la Fundación Jaimes Chía Trabajando para la Comunidad están diseñados para abordar las necesidades
+                        Los proyectos sociales de la Fundación Jaimes Chía Trabajando para la Comunidad están diseñados
+                        para abordar las necesidades
                         más apremiantes de nuestra comunidad y promover la inclusión, la igualdad y el bienestar para
                         todos.
                     </p>
@@ -168,7 +170,8 @@
                     <h5 class="cultural-titulo" title="Proyecto cultural: 'Arte en Comunidad'">Proyecto cultural: "Arte
                         en Comunidad"</h5>
                     <p class="cultural-subtitulo" title="Descripción del proyecto cultural">
-                        En la Fundación Jaimes Chía Trabajando para la Comunidad, valoramos y celebramos la diversidad cultural de nuestra comunidad
+                        En la Fundación Jaimes Chía Trabajando para la Comunidad, valoramos y celebramos la diversidad
+                        cultural de nuestra comunidad
                         a través de proyectos que promueven el arte, la música, la literatura y las tradiciones locales.
                     </p>
                     <div class="card-body">
@@ -228,12 +231,10 @@
                             sumen a esta causa.</p>
                     </div>
                     <div class="col-md-12 text-center">
-                        <a href="./realizar_donativos.html" aria-label="Haz tu donación" title="Ir a la página de donaciones">
-                            <button class="boton-donacion-proyecto">
-                                <span class="fas fa-hand-holding-heart icono-donacion-proyecto" aria-hidden="true"
-                                    title="Icono de un mano sosteniendo un corazón"></span> ¡Haz tu donación!
-                            </button>
-                        </a>
+                        <a class="boton-donacion-proyecto" href="./realizar_donativos.html" aria-label="Haz tu donación"
+                            title="Ir a la página de donaciones">
+                            <span class="fas fa-hand-holding-heart icono-donacion-proyecto" aria-hidden="true"
+                                title="Icono de un mano sosteniendo un corazón"></span> ¡Haz tu donación!</a>
                     </div>
                 </div>
             </div>
